complete about section

--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
     <main>
        <section id="about">
          <h3 class="title">ABOUT</h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa error hic placeat unde perspiciatis dolores. Enim eius atque nihil repellendus et pariatur unde, perferendis veniam debitis voluptatem mollitia libero provident expedita nesciunt consectetur? Ad consequuntur vel quisquam nostrum quia tenetur iste temporibus officiis deleniti molestias animi, optio dolore pariatur doloribus.</p>
+         <p>Motivated and detail-oriented BCA student with a strong interest in full stack development. Currently gaining hands-on experience through a frontend internship and personal projects. Eager to contribute to real-world projects, expand my skills in backend technologies, and grow into a dynamic full stack developer role.</p>
        </section>
        <section id="experience">
         <h3 class="title">EXPERIENCE</h3>
         <div>
-            <h4  style="font-weight: 400;"><span style="font-weight: bold ">Company,</span>Location - <span style="font-style: italic;">job title</span></h4>
-            <h5 style="font-size: 12px;font-weight: 100;">MONTH 20XX-PRESENT</h5>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe molestiae in adipisci nemo temporibus praesentium fuga aperiam quaerat labore aliquam.</p>
+            <h4  style="font-weight: 400;"><span style="font-weight: bold ">MaiTexa Technologies,</span>Calicut,India - <span style="font-style: italic;">Python Full Stack intern</span></h4>
+            <h5 style="font-size: 12px;font-weight: 100;">JUNE 2025-PRESENT</h5>
+            <p>Frontend Development InternMaitexa Technologies — Calicut, India June 2025 – Present
+                Assisting in building responsive user interfaces using HTML and CSS
+                Collaborating with senior developers and contributing to frontend enhancements
+                Gaining exposure to full stack workflows and Git-based version control</p>
         </div>
         <div>
             <h4  style="font-weight: 400;"><span style="font-weight: bold ">Company,</span>Location - <span style="font-style: italic;">job title</span></h4>
@@ -34,7 +37,7 @@
             <h5 style="font-size: 12px;font-weight: 100;">MONTH 20XX-PRESENT</h5>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe molestiae in adipisci nemo temporibus praesentium fuga aperiam quaerat labore aliquam.</p>
         </div>
-       </section id="education">
+       </section id="education">--
        <h3 class="title">EDUCATION</h3>
        <section>
            <div>
