comment expirience section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <h3 class="title">ABOUT</h3>
          <p>Motivated and detail-oriented BCA student with a strong interest in full stack development. Currently gaining hands-on experience through a frontend internship and personal projects. Eager to contribute to real-world projects, expand my skills in backend technologies, and grow into a dynamic full stack developer role.</p>
        </section>
-       <section id="experience">
+       <!-- <section id="experience">
         <h3 class="title">EXPERIENCE</h3>
         <div>
             <h4  style="font-weight: 400;"><span style="font-weight: bold ">MaiTexa Technologies,</span>Calicut,India - <span style="font-style: italic;">Python Full Stack intern</span></h4>
@@ -37,7 +37,8 @@
             <h5 style="font-size: 12px;font-weight: 100;">MONTH 20XX-PRESENT</h5>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe molestiae in adipisci nemo temporibus praesentium fuga aperiam quaerat labore aliquam.</p>
         </div>
-       </section id="education">--
+       </section> -->
+       <section  id="education">
        <h3 class="title">EDUCATION</h3>
        <section>
            <div>
