complete education section

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
            <div>
             <h4 style="font-weight: 400;"><span style="font-weight: bold">Concord Arts and Science College,</span><span>Kannur - <span style="font-style: italic;">BCA</span></h4>
              <h5 style="font-size: 12px;font-weight: 100;">JUNE 2022-25</h5>
-             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, in?</p>
+             <p>Bachelor of Computer Applications (BCA)Concord Arts and Science College, Kannur UniversityExpected Graduation: April 2025</p>
            </div>
            <div>
-            <h4 style="font-weight: 400;"><span style="font-weight: bold">Maitexa Technologies,</span><span>Calicut - <span style="font-style: italic;">Internship</span></h4>
+            <!-- <h4 style="font-weight: 400;"><span style="font-weight: bold">Maitexa Technologies,</span><span>Calicut - <span style="font-style: italic;">Internship</span></h4>
              <h5 style="font-size: 12px;font-weight: 100;">JUNE 2025-PRESENT</h5>
              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, in?</p>
-           </div>
+           </div> -->
        </section>
        <section id="project">
         <h3 class="title">PROJECTS</h3>
