complete project section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
        </section>
        <section id="project">
         <h3 class="title">PROJECTS</h3>
-        <h4 style="font-weight: 400;"><span style="font-weight: bold;">Project Name - </span><span style="font-style: italic;">Detail</span></h5>
+        <h4 style="font-weight: 400;"><span style="font-weight: bold;">Project Name -Personal Resume Website </span><span style="font-style: italic;">Detail</span></h5>
+            <p>Personal Resume Website
+
+Designed and built a professional resume using HTML and CSS
+
+Implemented a clean, mobile-friendly layout to showcase profile and skills
+
+Tools/Tech: HTML, CSS, VS Code</p>
        </section>
        <section id="skills">
         <h3 class="title">SKILLS</h3>
