complete skill section

--- a/index.html
+++ b/index.html
@@ -65,10 +65,9 @@ Tools/Tech: HTML, CSS, VS Code</p>
        </section>
        <section id="skills">
         <h3 class="title">SKILLS</h3>
-        <p>Lorem ipsum dolor sit amet.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        <p>Languages/Technologies: HTML, CSS</p>
+        <p>Tools: Git, GitHub, VS Code</p>
+        <p>Soft Skills: Team collaboration, Eagerness to learn, Attention to detail</p>
        </section>
        <section id="awards">
         <h3 class="title">AWARDS</h3>
