comment award section

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@ Tools/Tech: HTML, CSS, VS Code</p>
         <p>Tools: Git, GitHub, VS Code</p>
         <p>Soft Skills: Team collaboration, Eagerness to learn, Attention to detail</p>
        </section>
-       <section id="awards">
+       <!-- <section id="awards">
         <h3 class="title">AWARDS</h3>
         <p><span style="font-weight: bold;">Lorem, ipsum dolor.</span>Lorem ipsum dolor sit.</p>
         <p><span style="font-weight: bold;">Lorem, ipsum dolor.</span>Lorem ipsum dolor sit.</p>
         <p><span style="font-weight: bold;">Lorem, ipsum dolor.</span>Lorem ipsum dolor sit.</p>
         <p><span style="font-weight: bold;">Lorem, ipsum dolor.</span>Lorem ipsum dolor sit.</p>
-       </section>
+       </section> -->
        <section id="languages">
         <h3 class="title">LANGUAGES</h3>
         <P>Lorem ipsum ,dolor sit, amet</P>
