--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Tools/Tech: HTML, CSS, VS Code</p>
        </section> -->
        <section id="languages">
         <h3 class="title">LANGUAGES</h3>
-        <P>Lorem ipsum ,dolor sit, amet</P>
+        <P>English,Malayalam,Hindi</P>
        </section>
     </main>
     <footer>
