RESUME: contact deatils added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
        <section id="about">
          <h3 class="title">ABOUT</h3>
-         <p>Motivated and detail-oriented BCA student with a strong interest in full stack development. Currently gaining hands-on experience through a frontend internship and personal projects. Eager to contribute to real-world projects, expand my skills in backend technologies, and grow into a dynamic full stack developer role.</p>
+         <p>Motivated and detail-oriented BCA student with a strong interest in full stack development. Currently gaining hands-on experience through Pyhton Full Stack internship and personal projects. Eager to contribute to real-world projects, expand my skills in backend technologies, and grow into a dynamic full stack developer role.</p>
        </section>
        <!-- <section id="experience">
         <h3 class="title">EXPERIENCE</h3>
@@ -79,6 +79,16 @@ Tools/Tech: HTML, CSS, VS Code</p>
        <section id="languages">
         <h3 class="title">LANGUAGES</h3>
         <P>English,Malayalam,Hindi</P>
+       </section>
+
+       <section id="personalInfo">
+        <h3 class="title">CONTACT INFO</h3>
+        <a href="https://www.linkedin.com/in/adhishullasan">LinkedIn</a><br>
+        <a href="https://www.linkedin.com/in/adhishullasan">Github</a><br>
+        <P>Phone : 6235031256</P>
+        <h3 class="title">
+        </h3>
+
        </section>
     </main>
     <footer>
